# binary-typed

./: .travis.yml  BinaryTyped.hs  LICENSE  Main.hs  Makefile  README.md  binary-typed.cabal  changelog.md  make-hackage-docs  stack.yaml
benchmark/: Criterion.hs  CriterionOverview.hs  MessageLength.hs
src/Data/Binary/: Typed.hs
src/Data/Binary/Typed/: Debug.hs  Internal.hs  Tutorial.hs
tests/: APIConsistency.hs  HUnit.hs  QuickCheck.hs  Tests.hs
