name:                binary-typed
version:             0.1.0.0
synopsis:            Allows binary serialization tagged with type information,
                     allowing for typechecking and useful error messages at
                     the receiving site.

                     This package serves the same purpose as tagged-binary,
                     with a couple of key differences:

                     * Soundness of the data is ensured at each construction
                       site; all other data handling is still done in Binary.
                     * Support of different kinds of serialized type
                       annotations, each with specific strengths and weaknesses.
                     * Error messages provide details on type errors.
-- description:
homepage:            https://github.com/quchen/binary-typed
license:             BSD2
license-file:        LICENSE
author:              David Luposchainsky
maintainer:          dluposchainsky on googles email service
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.20

library
      exposed-modules:     BinaryTyped
      ghc-options:         -O2 -Wall
      -- other-modules:
      other-extensions:    GADTs, DeriveGeneric
      build-depends:       base       >= 4.7
                         , binary     >= 0.7
                         , bytestring >= 0.9
                         , cryptohash >= 0.11
      -- hs-source-dirs:
      default-language:    Haskell2010