name:          binary-typed
version:       0.1.0.0
synopsis:      Type-safe binary serialization
Description:   Allows `Binary` serialization tagged with type information,
               allowing for typechecking and useful error messages at
               the receiving site.
               .
               This package serves the same purpose as tagged-binary,
               with a couple of key differences:
               .
               * No depencency on @Internal@ modules of other libraries.
               * Support of different kinds of serialized type
                 annotations, each with specific strengths and weaknesses.
               * Error messages provide details on type errors.
homepage:      https://github.com/quchen/binary-typed
license:       BSD2
license-file:  LICENSE
author:        David Luposchainsky
maintainer:    dluposchainsky on googles email service
copyright:     David Luposchainsky
category:      Data
build-type:    Simple
cabal-version: >= 1.20

source-repository head
      type:     git
      location: https://github.com/quchen/binary-typed

library
      default-language:    Haskell2010
      exposed-modules:     Data.Binary.Typed
                           Data.Binary.Typed.Internal
      ghc-options:         -Wall
      hs-source-dirs:      src
      other-extensions:    GADTs, DeriveGeneric
      build-depends:       base             >= 4.7 && < 5
                         , binary           >= 0.7
                         , byteable         >= 0.1
                         , bytestring       >= 0.9
                         , cryptohash       >= 0.11


test-suite tasty
      default-language:    Haskell2010
      ghc-options:         -Wall -fno-warn-orphans
      hs-source-dirs:      tests
      main-is:             Tests.hs
      other-extensions:    ScopedTypeVariables, NumDecimals
      type:                exitcode-stdio-1.0
      build-depends:       base             >= 4.7 && < 5
                         , binary           >= 0.7
                         , binary-typed
                         , tasty            >= 0.8
                         , tasty-hunit      >= 0.8
                         , tasty-quickcheck >= 0.8

benchmark criterion
      default-language:    Haskell2010
      type:                exitcode-stdio-1.0
      hs-source-dirs:      benchmark
      main-is:             Criterion.hs
      build-depends:       base
                         , binary
                         , binary-typed
                         , criterion
      ghc-options:         -Wall